a simple life is its own reward

--- a/src/templates/secret.html
+++ b/src/templates/secret.html
@@ -20,5 +20,6 @@
   <li>When all else fails... try punching it in to the Entrance Theme Machine.</li>
   <li>The next clue is here, on this page.  Kind of.</li>
   <!-- THIS IS THE NEXT CLUE: <clue>A simple life is it's own reward</clue>.  However, you found it the super hard way.  You could have just looked at the url. -->
+  <!-- But since you went to all this trouble, I'll make it even easier for you: http://bit.ly/1ViqRpd -->
   </ul>
 {% endblock %}
