update menu items. FAQ

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -105,12 +105,12 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
-                                <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map (old)</a></li>
+                            <a href="/pages/FAQ">
+                                <i class="fa fa-fw fa-question-circle"></i>&nbsp;&nbsp;FAQ</a></li>
                         <li><a href="{% url 'courses:ranks' %}">
                             <i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/1dICnxDSHkQV2HMuuYLNsQLdUGFrSMskdFe_vSz41_Zw/edit?usp=sharing">
+                            <a href="https://docs.google.com/spreadsheets/d/1dICnxDSHkQV2HMuuYLNsQLdUGFrSMskdFe_vSz41_Zw/edit#gid=1467638221">
                                 <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;Hackerspace Budget</a></li>
                         <!-- <li><a href="#">#</a></li> -->
                         <!-- <li role="separator" class="divider"></li>
