--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li id='notifications-menu' class="dropdown">
-                    <a title="Notifiations" href="#"
+                    <a title="Notifications" href="#"
                        class="dropdown-toggle notification-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-bell"></i>&nbsp;<span id="notification_badge" class="badge alert-danger"></span>
