--- a/src/templates/400.html
+++ b/src/templates/400.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block content_outer %}
 
 <h1>400 Error: Bad request. It's not you, it's me. Please try again.</h1>
 
