--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block content_outer %}
 
 <h1>404 Error: Page Not Found. Stop trying to hack the Hackerspace!</h1>
 
