--- a/src/templates/403.html
+++ b/src/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block content_outer %}
 
 <h1>403 Error: Permission Denied. Stop trying to hack the Hackerspace!</h1>
 
