--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block content_outer %}
 
 <h1>500 Error: Server Error. We have been alerted, please try again later.</h1>
 
