--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -30,6 +30,17 @@ code {
 }
 
 kbd {
+    border-color:  #777;
+    text-shadow:0 1px 0 #fff;
+    background-color:#fff;
+    box-shadow:2px 2px 0 0 #ccc inset, -2px -2px 0 0 #aaa inset;
+    color:#333;
+
+    /*border-color:  #151515;*/
+    /*text-shadow:0 1px 0 #000;*/
+    /*background-color:#333;*/
+    /*box-shadow:2px 2px 0 0 #282828 inset, -2px -2px 0 0 #1d1d1d inset;*/
+    /*color:rgb(200, 200, 200);*/
 }
 
 /************ BADGES/Achievements **********************/
