--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -569,6 +569,20 @@ already distinguished*/
     letter-spacing: -2px;
 }
 
+
+kbd
+{
+    border-width: 1px;
+    border-style: solid;
+    border-radius:3px;
+    display:inline-block;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size:11px;
+    line-height:1.4;
+    margin:0 .1em;
+    padding:.1em .6em;
+}
+
 @media screen and (max-width: 768px) {
 
     .row-offcanvas {
