--- a/src/static_in_project/static_root/css/custom_slate.css
+++ b/src/static_in_project/static_root/css/custom_slate.css
@@ -69,8 +69,11 @@ pre, code {
 }
 
 kbd {
-  background-color: #ffffff;
-  color: #333333;
+  border-color:  #151515;
+  text-shadow:0 1px 0 #000;
+  background-color:#333;
+  box-shadow:2px 2px 0 0 #282828 inset, -2px -2px 0 0 #1d1d1d inset;
+  color:rgb(200, 200, 200);
 }
 
 
