Turn off cache middleware

--- a/src/courses/templates/courses/mark_calculations.html
+++ b/src/courses/templates/courses/mark_calculations.html
@@ -103,7 +103,7 @@
         <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
         &nbsp;Calculating data for chart...
       </div>
-      <canvas id="myChart" style="display: none;">
+      <canvas id="myChart" style="display: none;" height="404">
         <!-- content will be set by js in xp_chart.html -->
       </canvas>
 
