tiny optimizations in mark calculation

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -107,14 +107,16 @@
                         <i class="fa fa-bars"></i>
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="/pages/FAQ">
-                                <i class="fa fa-fw fa-question-circle"></i>&nbsp;&nbsp;FAQ</a></li>
-                        <li><a href="{% url 'courses:ranks' %}">
-                            <i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
+                        <li><a href="{% url 'courses:ranks' %}"><i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
+                        <li><a href="/pages/FAQ"><i class="fa fa-fw fa-question-circle-o"></i>&nbsp;&nbsp;FAQ</a></li>
+                        <li><a href="https://github.com/timberline-secondary/hackerspace/blob/master/CHANGELOG.md">
+                          <i class="fa fa-fw fa-cog"></i>&nbsp;&nbsp;Changelog</a>
+                        </li>
+
                         <li>
                             <a href="https://docs.google.com/spreadsheets/d/1dICnxDSHkQV2HMuuYLNsQLdUGFrSMskdFe_vSz41_Zw/edit#gid=1467638221">
-                                <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;Hackerspace Budget</a></li>
+                                <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;Hackerspace Budget</a>
+                        </li>
                         <!-- <li><a href="#">#</a></li> -->
                         <!-- <li role="separator" class="divider"></li>
                         <li class="dropdown-header">Debug</li> -->
