bootstrap badge position fix on achievements (badges)

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -272,7 +272,7 @@
             {% endif %}
             '>
               <div class="icon-badge-container">
-                <img class="icon-lg img-rounded
+                <img class="icon-xl img-rounded
                   {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
                   src="{{assertion.badge.get_icon_url}}">
                 <span class="badge badge-icon-lg progress-bar-info">{{assertion.count_bootstrap_badge}}</span>
