add common css to summernote widget.

--- a/src/static_in_project/static_root/css/custom_summernote_widget.css
+++ b/src/static_in_project/static_root/css/custom_summernote_widget.css
@@ -1,4 +1,4 @@
-/* Used in the summernote iframe whcih can't see the our other css files
+/* Used in the summernote iframe which can't see the our other css files
 
   See settings/base.py:
 
@@ -20,4 +20,9 @@
 .note-editable {
   /*need to override inline height which is 20px too short*/
   height: 382px !important;
+}
+
+body {
+    padding: 0;
+    min-height: 0;
 }
