--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -1,9 +1,9 @@
 <!--
   Quest Approvals (quest_approval.html)
-    > SUBMITTED (tab_quests_available.html)
-    > RETURNED (tab_quests_submission.html)
-    > APPROVED (tab_quests_submission.html)
-    > SKIPPED (tab_quests_submission.html)
+    > SUBMITTED (tab_quests_approvals.html)
+    > RETURNED (tab_quests_approvals.html)
+    > APPROVED (tab_quests_approvals.html)
+    > SKIPPED (tab_quests_approvals.html)
 -->
 
 {% extends "quest_manager/base.html" %}
