--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -70,9 +70,10 @@
             <a class="btn btn-warning"
               id= "btn_quick_text{{submission.id}}" role="button"
               title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
-            <a class="btn btn-default" href="{% url 'quests:skip' submission.id %}"
-            title="Do not grant XP for this quest (or badges resulting) but mark as complete."
-            role="button">Skip</a>
+            <a class="pull-right btn btn-default" href="{% url 'quests:skip' submission.id %}"
+              title="Do not grant XP for this quest (or badges resulting) but mark as complete."
+              role="button">Skip</a>
+          {% with submission as s %}{% include 'quest_manager/quick_buttons.html' %}{% endwith %}
         {% else %}
           {% if submission.is_approved %}
             <input type='submit' name='comment' class='btn btn-primary' value='Add Comment' />
