--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -1,9 +1,9 @@
 <!--
   Quest Approvals (quest_approval.html)
-    > SUBMITTED (tab_quests_available.html)
-    > RETURNED (tab_quests_submission.html)
-    > APPROVED (tab_quests_submission.html)
-    > SKIPPED (tab_quests_submission.html)
+    > SUBMITTED (tab_quests_approvals.html)
+    > RETURNED (tab_quests_approvals.html)
+    > APPROVED (tab_quests_approvals.html)
+    > SKIPPED (tab_quests_approvals.html)
 -->
 
 {% load crispy_forms_tags %}
@@ -83,20 +83,15 @@
             {{ quick_reply_form | crispy }}
             <div>
               {% if not s.is_approved %}
-                <input type='submit' name='approve_button'
-                       class='btn btn-success' value='Approve' />
+                <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
               {% endif %}
-                <input type='submit' name='comment_button'
-                       class='btn btn-primary' value='Comment' />
-                <input type='submit' name='return_button'
-                       class='btn btn-danger' value='Return' />
-                <a class="btn btn-warning" data-target="#quick_reply{{s.id}}"
-                  id= "btn_quick_text{{s.id}}" role="button"
+                <input type='submit' name='comment_button' class='btn btn-primary' value='Comment' />
+                <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
+                <a class="btn btn-warning" data-target="#quick_reply{{s.id}}" id= "btn_quick_text{{s.id}}" role="button"
                   title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
-                <a class="btn btn-default" href="{% url 'quests:skip' s.id %}"
-                title="Do not grant XP for this quest (or badges resulting) but mark as complete."
-                role="button">Skip</a>
-
+                <a class="pull-right btn btn-default" href="{% url 'quests:skip' s.id %}"
+                  title="Do not grant XP for this quest (or badges resulting) but mark as complete."
+                  role="button">Skip</a>
             </div>
           </form>
         </li>
