TOC generator for FAQ

--- a/src/templates/flatpages/default.html
+++ b/src/templates/flatpages/default.html
@@ -24,4 +24,39 @@
 
 {% block content_last %}{% endblock %}
 
-{% block js %}{% endblock %}
+{% block js %}
+  <script>
+
+    var ToC =
+      "<nav role='navigation' class='table-of-contents'>" +
+        "<h4>Contents:</h4>" +
+        "<ul>";
+
+    $("#main h3").each(function() {
+
+        var $el = $(this);
+        var title = $el.text();
+        $el.attr("id", title);
+
+        var tocEntry =
+            "<li>" +
+            "<a href='#" + title + "'>" +
+            title +
+            "</a>" +
+            "</li>";
+
+        ToC += tocEntry;
+
+    });
+
+
+    ToC +=
+        "</ul>" +
+        "</nav>";
+
+    $("#TOC").append(ToC);
+
+  </script>
+
+
+{% endblock %}
