--- a/src/courses/templates/courses/mark_calculations.html
+++ b/src/courses/templates/courses/mark_calculations.html
@@ -12,7 +12,7 @@
   {% elif obj.semester.days_so_far < 0 %}
     I can't calculate your mark because semester hasn't started yet!  According
     to my records, the semester is scheduled to start on
-  </strong>{{obj.semester.first_day}}</strong>.</p>
+  <strong>{{obj.semester.first_day}}</strong>.</p>
   {% else %}
     {% if num_courses == 1 %}
       your current mark is:
@@ -103,7 +103,7 @@
         <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
         &nbsp;Calculating data for chart...
       </div>
-      <canvas id="myChart" style="display: none;">
+      <canvas id="myChart" style="display: none; height: 400px;">
         <!-- content will be set by js in xp_chart.html -->
       </canvas>
 
