--- a/src/courses/templates/courses/xp_chart.html
+++ b/src/courses/templates/courses/xp_chart.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <!-- https://github.com/chartjs/Chart.Zoom.js/blob/master/samples/zoom.html -->
 <!-- <script type="text/javascript" src="https://raw.githubusercontent.com/chartjs/Chart.Zoom.js/master/Chart.Zoom.min.js"></script></script> -->
 
@@ -8,11 +8,9 @@
 
   var ctx = document.getElementById("myChart");
 
-  class DataPoint {
-      constructor(x, y) {
-          this.x = x;
-          this.y = y;
-      }
+  function DataPoint(x, y) {
+      this.x = x;
+      this.y = y;
   }
 
   var days = 85;
@@ -20,6 +18,7 @@
 
   // XP DATA SET
   var XPData = {
+      type: 'line',
       label: 'XP Earned',
       fill: false,
       backgroundColor: "#aaa", //used for legend
@@ -29,10 +28,25 @@
       pointBackgroundColor: "#aaa",
       data: [{x: 0, y: 0}],
   };
+{#  // XP DATA SET FOR BAR STYLE#}
+{#  var XPDataBar = {#}
+{#      type: 'bar',#}
+{#      xAxisID: "x-axis-0",#}
+{#      yAxisID: "y-axis-XP",#}
+{#      label: 'XP Earned',#}
+{#      fill: false,#}
+{#      backgroundColor: "#cc1111", //used for legend#}
+{#      borderColor: "#11cc11", //used for legend#}
+{#      showLine: false,#}
+{#      borderWidth: 2,#}
+{#      data: [100,150,2,300,4,5,6,7,8,9],#}
+{#  };#}
+
 
 
   // XP Trend Data
   var XPTrendData = {
+      type: 'line',
       label: 'If you continue at your current rate',
       fill: false,
       pointRadius: 0,
@@ -44,15 +58,16 @@
   };
 
   var GradeAData = {
+      type: 'line',
       label: 'A (86%)',
       pointRadius: 0,
-      lineTension: 0,
       backgroundColor: "rgba(255,255,0,0)",
       borderColor: "rgba(255, 236, 179,50)",
       data: [{x: 0, y: 0}],
   };
 
   var GradeFData = {
+      type: 'line',
       label: 'Pass (50%)',
       pointRadius: 0,
       backgroundColor: "rgba(255, 0, 0, 0)",
@@ -62,6 +77,7 @@
 
   // Chillax Line Data Set = B
   var ChillaxLineData = {
+      type: 'line',
       label: 'Chillax Line (73%)',
       pointRadius: 0,
       backgroundColor: "rgba(0,255,255,0)",
@@ -70,7 +86,9 @@
   };
 
   var data = {
-      datasets: [XPData,
+      datasets: [
+          XPData,
+{#          XPDataBar,#}
           XPTrendData,
           GradeFData,
           ChillaxLineData,
@@ -151,7 +169,7 @@
       legend: {
           position: 'top',
           labels: {
-
+              usePointStyle: true,
           },
       }, //legend
 
@@ -192,7 +210,7 @@
 
 
   function generate_trend(days_in_semester) {
-    // XP Trend calculaion
+    // XP Trend calculation
     // Just a linear extrapolation of the average XP per day
     var total = 0;
     XPTrendData.data = [];
@@ -201,9 +219,9 @@
     var average_per_day = total / days_so_far;
 
     var trend_total = total;
-    for (i = days_so_far; i <= days_in_semester; i++) {
+    for (var i = days_so_far; i <= days_in_semester; i++) {
 
-        p = new DataPoint(i, trend_total);
+        var p = new DataPoint(i, trend_total);
         XPTrendData.data.push(p);
         trend_total += average_per_day;
 
@@ -215,10 +233,10 @@
     ChillaxLineData.data = [];
     GradeAData.data = [];
     GradeFData.data = [];
-    for (i = 1; i <= days; i++) {
-        p = new DataPoint(i, Math.floor(i * 725 / days));
-        pA = new DataPoint(i, Math.floor(i * 855 / days));
-        pF = new DataPoint(i, Math.floor(i * 495 / days));
+    for (var i = 1; i <= days; i++) {
+        var p = new DataPoint(i, Math.floor(i * 725 / days));
+        var pA = new DataPoint(i, Math.floor(i * 855 / days));
+        var pF = new DataPoint(i, Math.floor(i * 495 / days));
         ChillaxLineData.data.push(p);
         GradeAData.data.push(pA);
         GradeFData.data.push(pF);
@@ -232,7 +250,6 @@
       options: options,
   });
 
-  //get data for plot and update
   function ajax_update_plot() {
 
     // user in this view is the request.user, if a student,
