blocks display for 1.11

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -93,7 +93,9 @@
                 <td>{{ object.last_name|default:"-" }}</td>
                 <td>{{ object.alias|default:"-" }}</td>
                 <td>{{ object.grad_year|default:"-" }}</td>
-                <td>{{ object.blocks_value }}</td>
+                <td>
+                  {% for block in object.blocks %}{{ block }}{% if not forloop.last %}, {% endif %} {% endfor %}
+                </td>
                 <td>{% if object.visible_to_other_students or request.user.is_staff %}
                     {{ object.xp_cached }}
                     {% else %}<i class="fa fa-eye-slash"></i>{% endif %}
