--- a/src/templates/secret.html
+++ b/src/templates/secret.html
@@ -17,9 +17,10 @@
   <li>If you get stuck, ask around.  Other students may have noticed things around the class that you haven't.</li>
   <li>You don't need to leave the Hackerspace.</li>
     <li>All clues require a different method to solve them.  For example, you've already used binary to get here, so no other clue will use binary.</li>
-  <li>When all else fails... try punching it in to the Entrance Theme Machine.</li>
+  <li>When all else fails, try punching it in to the Entrance Theme Machine.</li>
+  <li>At some point, you'll need a number.  That number is 2^20. </li>
   <li>The next clue is here, on this page.  Kind of.</li>
-  <!-- THIS IS THE NEXT CLUE: <clue>A simple life is it's own reward</clue>.  However, you found it the super hard way.  You could have just looked at the url. -->
+  <!-- THIS IS THE NEXT CLUE: <clue>A simple life is it's own reward</clue>.  However, you found it the super hard way.  You could have just looked at the url at the top of the page. -->
   <!-- But since you went to all this trouble, I'll make it even easier for you: http://bit.ly/1ViqRpd -->
   </ul>
 {% endblock %}
