--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -15,7 +15,7 @@
          src="{% if request.user.profile.dark_theme %}
                  {% static 'img/banner_slate.png' %}
               {% else %}
-                 {% static 'img/banner.png' %}
+                 {% static 'img/banner.svg' %}
               {% endif %}"
          class="img-responsive" alt="Timberline's Digital Hackerspace Logo"/>
   </h3>
