--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,7 +13,7 @@
      src="{% if request.user.profile.dark_theme %}
                  {%static 'img/banner_slate.png' %}
               {% else %}
-                 {%static 'img/banner.png' %}
+                 {%static 'img/banner.svg' %}
               {% endif %}"
      alt="Timberline's Digital Hackerspace Landing Page"/>
 {% endblock %}
