--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -11,13 +11,7 @@
 
   <!--so logo margins align with main div headings-->
   <h3 class="hidden-xs">
-    <img id="logo"
-         src="{% if request.user.profile.dark_theme %}
-                 {% static 'img/banner_slate.png' %}
-              {% else %}
-                 {% static 'img/banner.svg' %}
-              {% endif %}"
-         class="img-responsive" alt="Timberline's Digital Hackerspace Logo"/>
+    {% include "banner.html" %}
   </h3>
 
 
