--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -604,3 +604,11 @@ kbd
     }
 
 }
+
+
+/*************** SECRET ****************/
+
+.secret-link, secret-link:hover {
+    color: #333 !important;
+    cursor: default;
+}
