--- a/src/templates/secret.html
+++ b/src/templates/secret.html
@@ -3,7 +3,7 @@
 {% block head_title %}Secret | {% endblock %}
 
 {% block content_first %}{% endblock %}
-{% block heading %}Super Secret Page!<i class="fa fa-key pull-right"></i>{% endblock %}
+{% block heading %}Super Secret Page!<a class="secret-link" href="http://bit.ly/1ViqRpd"><i class="fa fa-key pull-right"></i></a>{% endblock %}
 
 {% block content %}
   <p>You found me!  Congratulations. Yay for you.  I bet you think you're so great. But what if I told you this is only
