--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -1,5 +1,15 @@
 {% extends "suggestions/base.html" %}
+{% load staticfiles %}
 {% load crispy_forms_tags %}
+
+{% block head_css %}
+
+{% endblock %}
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/suggestions.css' %}" >
+{% endblock %}
+
+
 {% block heading_inner %}Suggestions
     <div class="btn-group">
         <a href="{% url 'suggestions:list' %}"
@@ -7,133 +17,154 @@
         <a href="{% url 'suggestions:list_completed' %}"
            class="btn {% if completed_list %}btn-primary{% else %}btn-default{% endif %}">Completed</a>
     </div>
-    <small>You've voted {{ votes_this_semester }} times this semester</small>
+    <br><small>You've voted {{ votes_this_semester }} times this semester</small>
 {% endblock %}
+
 {% block content %}
     <br>
 
 {% if request.user.is_staff or semester.is_open and request.user.profile.has_current_course %}
-<div class="panel panel-primary" >
+  <div class="panel panel-primary">
     <div class="panel-heading" title="This section is only visible to you">
-        How to get XP by helping to improve the Hackerspace.
+      How to get XP by helping to improve the Hackerspace.
     </div>
     <div class="panel-body">
-        <p>Look through the list of suggestions below and vote on those you like or dislike by
+      <p>Look through the list of suggestions below and vote on those you like or dislike by
         clicking the thumbs up/down buttons beside an active suggestion.</p>
-        <ul>
-              <a class="btn btn-primary pull-right"
-              href="{% url 'suggestions:create' %}">Make a Suggestion</a>
-            <li>For every {{ num_votes }} votes, you will automatically receive a {{ vote_badge.xp }} XP
-              {{ vote_badge.name }} Award.</li>
-            <li>If you make a suggestion and it is approved, you will automatically receive a
-                {{ suggestion_badge.xp }} XP {{ suggestion_badge.name }} Award.</li>
-        </ul>
+      <ul>
+        <a class="btn btn-primary pull-right"
+           href="{% url 'suggestions:create' %}">Make a Suggestion</a>
+        <li>For every {{ num_votes }} votes, you will automatically receive a {{ vote_badge.xp }} XP
+          {{ vote_badge.name }} Award.
+        </li>
+        <li>If you make a suggestion and it is approved, you will automatically receive a
+          {{ suggestion_badge.xp }} XP {{ suggestion_badge.name }} Award.
+        </li>
+      </ul>
     </div>
-</div>
-  <div class="row panel-heading">
-    <div class="col-xs-2">{% if not completed_list %}Vote{% endif %}</div>
-    <div class="col-xs-1">Score</div>
-    <div class="col-xs-6">Suggestion</div>
-    <!-- <div class="col-xs-2">User</div> -->
-    <div class="col-xs-3">Status</div>
   </div>
-  <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+
+
+<!-- TABLE -->
+  <table id="suggestions-table"
+         data-toggle="table"
+         data-id-field="id"
+         data-detail-view="true"
+         data-detail-formatter="detailFormatter"
+         data-sort-name="score"
+         data-sort-order="desc"
+  >
+    <thead>
+    <tr>
+      <th data-field="id" data-visible='false'>ID</th>
+      <th data-field="vote" data-class="text-center">{% if not completed_list %}Vote{% endif %}</th>
+      <th data-field="score" data-class="text-center" data-sortable='true'>Score</th>
+      <th data-field="suggestion">Suggestion</th>
+      <th data-field="status" data-sortable='true'>Status</th>
+      <th data-field="date" data-sortable='true' data-sorter="dateSorter">Date</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for object in object_list %}
+    <tr class="
+      {% if object.status == 1 %}row-info
+      {% elif object.status == 2 %}
+      {#    {% elif object.status == 3 %}panel-success#}
+      {% elif object.status == 4 %}row-info
+      {% elif object.status == 5 %}text-muted
+      {% else %}
+      {% endif %}
+    ">
+      <td>{{ object.id }}</td>
+      <!-- VOTING CELL -->
+      <td class="col-md-1 text-center">
+        {% if not completed_list and object.status == 2 %}
+          <a href="{% url 'suggestions:upvote' object.id %}" class="vote vote-up">
+            <i class="fa fa-lg fa-chevron-circle-up"></i></a>
+          <br>
+          <a href="{% url 'suggestions:downvote' object.id %}" class="vote vote-down">
+            <i class="fa fa-lg fa-chevron-circle-down"></i>
+          </a>
+        {% endif %}
+      </td>
+      <td class="col-md-1 text-center">{{ object.get_score }}</td>
+      <td class="col-md-6">{{object.title}}
+        {% if request.user.is_staff %}<br>
+        <small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
+                {{object.user}}</a> - {{object.user.profile}}</small>
+        {% elif request.user == object.user %}<br>
+        <small>(Your suggestion)</small>
+        {% endif %}
+
+      </td>
+      <td class="col-md-2">
+        {% if object.status == 1 %}Awaiting Approval
+        {% elif object.status == 2 %}Approved
+        {% elif object.status == 3 %}Completed
+        {% elif object.status == 4 %}Unlikely
+        {% elif object.status == 5 %}Denied
+        {% endif %}
+      </td>
+      <td class="col-md-2">
+        <small>{{ object.status_timestamp|timesince }} ago</small>
+        <div style="display:none;">{{ object.status_timestamp|date:'Ymd' }}</div> <!-- for sorting -->
+      </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+
+{#  Content for detailed view #}
   {% for object in object_list %}
-    <div class="panel accordian
-      {% if object.id == active_id %} active {% endif %}
-      {% if object.status == 1 %}panel-info
-      {% elif object.status == 2 %}panel-default
-  {#    {% elif object.status == 3 %}panel-success#}
-      {% elif object.status == 4 %}panel-info
-      {% elif object.status == 5 %}panel-danger
-      {% else %}panel-default
-      {% endif %}">
-      <div class="panel-heading accordian accordian-trigger
-        {% if object.id == active_id %} active {% endif %}"
-        role="tab" id="heading{{object.id}}"
-        aria-expanded="{% if object.id == active_id %}true{% else %}false{% endif %}"
-        aria-controls="collapse{{object.id}}"
-        data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
-        <div class="row">
-            <h4 class="panel-title">
-              <div class="col-xs-2">
-                {% if not completed_list and object.status == 2 %}
-                <a href="{% url 'suggestions:upvote' object.id %}">
-                  <i class="fa fa-2x fa-thumbs-o-up"></i></a>
-                &nbsp;&nbsp;
-                <a href="{% url 'suggestions:downvote' object.id %}">
-                  <i class="fa fa-2x fa-thumbs-o-down"></i>
-                </a>
-                {% endif %}
-              </div>
-              <div class="col-xs-1">{{ object.get_score }}</div>
-              <div class="col-xs-6">{{object.title}}<br><small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
-                {{object.user}}</a> - {{object.user.profile}}</small></div>
-              <!-- <div class="col-xs-2">{{object.user}}</div> -->
-              <div class="col-xs-3">
-                {% if object.status == 1 %}Awaiting Approval
-                {% elif object.status == 2 %}Approved
-                {% elif object.status == 3 %}Completed
-                {% elif object.status == 4 %}Unlikely
-                {% elif object.status == 5 %}Denied
-                {% endif %}
-                <br /><small>{{object.status_timestamp|timesince}} ago</small>
-              </div>
-            </h4>
+  <div style="display: none;" id="collapse{{ object.id }}">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-buttons">
+        {% if request.user.is_staff %}
+          <div class="pull-right">
+            <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+            {% if object.status != 3 %}
+              <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
+            {% endif %}
+            {% if object.status != 2 %}
+              <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+            {% endif %}
+            {% if object.status == 2 %}
+              <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}"
+                 role="button">Complete</a>
+            {% endif %}
+          </div>
+        {% endif %}
+        <div>
+          {{ object.description }}
         </div>
-      </div>
-      <div id="collapse{{object.id}}"
-        class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
-        role="tabpanel" aria-labelledby="heading{{object.id}}">
-        <ul class="list-group">
-          <li class="list-group-item list-group-item-buttons">
-            {% if request.user.is_staff %}
-            <div class="pull-right">
-              <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
-              {% if object.status != 3 %}
-                  <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
-              {% endif %}
-              {% if object.status != 2 %}
-                <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
-              {% endif %}
-              {% if object.status == 2 %}
-                <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}" role="button">Complete</a>
-              {% endif %}
-            </div>
-            {% endif %}
-            <!-- <i class="fa fa-quote-left fa-2x pull-left"></i> -->
-            <div>
-              {{object.description}}
-            </div>
-          </li>
+      </li>
 
-          {% with object.get_comments as target_comments %}
-            {% if target_comments %}
-              <li class="list-group-item list-group-item-info">Suggestion Comments</li>
-              {% include "comments/comments.html" %}
-            {% endif %}
-          {% endwith %}
+      {% with object.get_comments as target_comments %}
+        {% if target_comments %}
+          <li class="list-group-item list-group-item-info">Suggestion Comments</li>
+          {% include "comments/comments.html" %}
+        {% endif %}
+      {% endwith %}
 
-          <li class="list-group-item list-group-item-info">Comment </li>
-          <li class="list-group-item">
-            {% if not request.user.profile.banned_from_comments %}
-            <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
-              {{ comment_form | crispy }}
-              <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
-            </form>
-            {% else %}
-              <p><i class="fa fa-ban text-danger"> </i>
-                Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
-            {% endif %}
-          </li>
-        </ul>
+      <li class="list-group-item list-group-item-info">Comment</li>
+      <li class="list-group-item">
+        {% if not request.user.profile.banned_from_comments %}
+          <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
+            {{ comment_form | crispy }}
+            <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment'/>
+          </form>
+        {% else %}
+          <p><i class="fa fa-ban text-danger"> </i>
+            Sorry Spammy McTrollson, you've been banned from commenting. If you would like this
+            privilege back, you can discuss it with your teacher.</p>
+        {% endif %}
+      </li>
+    </ul>
 
-      </div>
-    </div>
-
+  </div>  <!-- collapsible content -->
   {% endfor %}
 
-  </div>
+
 
 {% else %}
   {% if semester.is_open %}
@@ -144,13 +175,71 @@
   {% endif %}
 {% endif %}
 {% endblock %}
+
+
 {% block js %}
-<script>
-// Stop links in accordian from triggering accordian opening and closing
-$(document).ready(function(){
-    $("[data-toggle='collapse'] a").click(function(e) {
-        e.stopPropagation();
-   });
-});
-</script>
+
+  <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
+
+  <script>
+      // https://jsfiddle.net/dabros/6ony6cs2/1/
+      var $table = $('#suggestions-table');
+
+      $table.on('expand-row.bs.table', function (e, index, row, $detail) {
+          //var $tr = $("tr[data-index=" + index + "]").next(".detail-view");
+          //console.log($tr);
+          //$tr.hide();
+          var detailContent = $("#collapse" + row.id).html();
+
+          //sliding doesn't work on table elements, so add a div and animate that.
+          $detail.html('<div class="detail-container" style="display:none;"></div>');
+          var $detailContainer = $detail.find('div');
+          $detailContainer.html(detailContent);
+          $detailContainer.slideDown();
+      });
+
+      $table.on("click-row.bs.table", function (e, row, $tr) {
+
+          // prints Clicked on: table table-hover, no matter if you click on row or detail-icon
+          //console.log("Clicked on: " + $(e.target).attr('class'), [e, row, $tr]);
+
+          $table.find('tr').removeClass('row-active');
+          if ($tr.next().is('tr.detail-view') ) {
+              $tr.next().find('div.detail-container').slideUp(function() {
+                  // when animation complete, otherwise element will be deleted before animation
+                  $table.bootstrapTable('collapseRow', $tr.data('index'));
+              });
+          } else {
+              $table.bootstrapTable('collapseAllRows');
+              $tr.addClass('row-active');
+              $table.bootstrapTable('expandRow', $tr.data('index'));
+          }
+      });
+
+      // Sort the last column, which has a date div hidden in it for easy sorting
+      function dateSorter(a, b) {
+          // need to pull 8 digit date out of this part of a,b: <div>YYYYMMDD</div>
+          var re = /\d{6}/; // max 6 digits from 0-9
+          var dateA = a.match(re); // first element is the match
+          var dateB = b.match(re); // first element is the match
+
+          dateA = dateA == null ? 0 : dateA[0];
+          dateB = dateB == null ? 0 : dateB[0];
+
+          // match the text up to the first tag, probably <br>
+          //var re = /^.*(?=(<))/;
+
+          if (dateA > dateB) return 1;
+          if (dateA < dateB) return -1;
+          return 0;
+      }
+
+      // Stop links in table-accordian from triggering accordian opening and closing
+      $(document).ready(function () {
+          $('a.vote').click(function (e) {
+              e.stopPropagation();
+          });
+      });
+  </script>
+
 {% endblock %}
